--- a/frontend/services.html
+++ b/frontend/services.html
@@ -6,13 +6,15 @@
     <title>Our Services - HealthCare System</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Hero Icons -->
     <script src="https://unpkg.com/@heroicons/react@2.0.18/24/solid"></script>
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/frontend/styles/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- Theme Script -->
     <script>
         if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -30,16 +32,21 @@
                 <div class="flex">
                     <!-- Logo -->
                     <div class="flex-shrink-0 flex items-center">
-                        <a href="/frontend/index.html" class="text-2xl font-bold text-blue-600 dark:text-blue-400">
+                        <a href="index.html" class="text-2xl font-bold text-blue-600 dark:text-blue-400">
                             HealthCare
                         </a>
                     </div>
                     <!-- Navigation Links -->
                     <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
-                        <a href="/frontend/index.html" class="nav-link">Home</a>
-                        <a href="/frontend/appointments.html" class="nav-link">Appointments</a>
-                        <a href="/frontend/doctors.html" class="nav-link">Doctors</a>
-                        <a href="/frontend/services.html" class="nav-link active">Services</a>
+                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="appointments.html" class="nav-link">Appointments</a>
+                        <a href="doctors.html" class="nav-link">Doctors</a>
+                        <a href="services.html" class="nav-link active">Services</a>
+                        <a href="about.html" class="nav-link">About</a>
+                        <a href="faq.html" class="nav-link">FAQ</a>
+                        <a href="testimonials.html" class="nav-link">Testimonials</a>
+                        <a href="blog.html" class="nav-link">Blog</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </div>
                 </div>
                 <div class="flex items-center space-x-4">
@@ -52,8 +59,8 @@
                             <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"></path>
                         </svg>
                     </button>
-                    <a href="/frontend/login.html" class="text-gray-700 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400">Login</a>
-                    <a href="/frontend/register.html" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600">Register</a>
+                    <a href="login.html" class="text-gray-700 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400">Login</a>
+                    <a href="register.html" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600">Register</a>
                 </div>
             </div>
         </div>
@@ -61,6 +68,72 @@
 
     <!-- Main Content -->
     <main class="pt-16">
+        <!-- Hero Section -->
+        <div class="relative bg-white dark:bg-gray-800 py-20">
+            <div class="absolute inset-0 bg-gradient-to-r from-blue-500 to-teal-400 opacity-10"></div>
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative">
+                <div class="text-center">
+                    <h1 class="text-4xl font-extrabold text-gray-900 dark:text-white sm:text-5xl md:text-6xl" data-aos="fade-up">
+                        Our <span class="text-blue-600 dark:text-blue-400">Healthcare Services</span>
+                    </h1>
+                    <p class="mt-3 max-w-md mx-auto text-base text-gray-500 dark:text-gray-400 sm:text-lg md:mt-5 md:text-xl md:max-w-3xl" data-aos="fade-up" data-aos-delay="100">
+                        Comprehensive, patient-centered care delivered by experienced healthcare professionals using cutting-edge technology.
+                    </p>
+                    <div class="mt-8 flex justify-center" data-aos="fade-up" data-aos-delay="200">
+                        <a href="appointments.html" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600">
+                            Book an Appointment
+                        </a>
+                        <a href="doctors.html" class="ml-4 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-blue-600 bg-blue-100 hover:bg-blue-200 dark:text-blue-400 dark:bg-gray-700 dark:hover:bg-gray-600">
+                            Meet Our Doctors
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Introduction Section -->
+        <div class="bg-gray-50 dark:bg-gray-900 py-16">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="lg:text-center mb-12" data-aos="fade-up">
+                    <h2 class="text-3xl font-extrabold text-gray-900 dark:text-white sm:text-4xl">
+                        Why Choose Our Services?
+                    </h2>
+                    <p class="mt-4 max-w-2xl text-xl text-gray-500 dark:text-gray-400 lg:mx-auto">
+                        We combine medical expertise with compassionate care to provide you with the best healthcare experience.
+                    </p>
+                </div>
+
+                <div class="mt-10">
+                    <div class="grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-3">
+                        <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg border border-gray-100 dark:border-gray-700" data-aos="fade-up">
+                            <div class="w-12 h-12 bg-blue-100 dark:bg-blue-900 rounded-md flex items-center justify-center mb-4">
+                                <i class="fas fa-user-md text-blue-600 dark:text-blue-400 text-xl"></i>
+                            </div>
+                            <h3 class="text-lg font-medium text-gray-900 dark:text-white mb-2">Expert Specialists</h3>
+                            <p class="text-gray-500 dark:text-gray-400">Our team consists of board-certified specialists who are leaders in their respective fields.</p>
+                        </div>
+
+                        <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg border border-gray-100 dark:border-gray-700" data-aos="fade-up" data-aos-delay="100">
+                            <div class="w-12 h-12 bg-blue-100 dark:bg-blue-900 rounded-md flex items-center justify-center mb-4">
+                                <i class="fas fa-microscope text-blue-600 dark:text-blue-400 text-xl"></i>
+                            </div>
+                            <h3 class="text-lg font-medium text-gray-900 dark:text-white mb-2">Advanced Technology</h3>
+                            <p class="text-gray-500 dark:text-gray-400">We utilize state-of-the-art medical equipment and innovative techniques for accurate diagnosis and effective treatment.</p>
+                        </div>
+
+                        <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg border border-gray-100 dark:border-gray-700" data-aos="fade-up" data-aos-delay="200">
+                            <div class="w-12 h-12 bg-blue-100 dark:bg-blue-900 rounded-md flex items-center justify-center mb-4">
+                                <i class="fas fa-heart text-blue-600 dark:text-blue-400 text-xl"></i>
+                            </div>
+                            <h3 class="text-lg font-medium text-gray-900 dark:text-white mb-2">Patient-Centered Care</h3>
+                            <p class="text-gray-500 dark:text-gray-400">We prioritize your needs and preferences, ensuring personalized treatment plans tailored to your specific health goals.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Services Section -->
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
             <div class="text-center mb-12" data-aos="fade-up">
                 <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">Our Services</h1>
@@ -98,7 +171,7 @@
                             Cardiac Rehabilitation
                         </li>
                     </ul>
-                    <a href="/frontend/appointments.html" class="text-blue-600 hover:text-blue-500 dark:text-blue-400 dark:hover:text-blue-300 font-medium">
+                    <a href="appointments.html" class="text-blue-600 hover:text-blue-500 dark:text-blue-400 dark:hover:text-blue-300 font-medium">
                         Book Appointment →
                     </a>
                 </div>
@@ -132,7 +205,7 @@
                             Movement Disorders
                         </li>
                     </ul>
-                    <a href="/frontend/appointments.html" class="text-blue-600 hover:text-blue-500 dark:text-blue-400 dark:hover:text-blue-300 font-medium">
+                    <a href="appointments.html" class="text-blue-600 hover:text-blue-500 dark:text-blue-400 dark:hover:text-blue-300 font-medium">
                         Book Appointment →
                     </a>
                 </div>
@@ -166,7 +239,7 @@
                             Fracture Care
                         </li>
                     </ul>
-                    <a href="/frontend/appointments.html" class="text-blue-600 hover:text-blue-500 dark:text-blue-400 dark:hover:text-blue-300 font-medium">
+                    <a href="appointments.html" class="text-blue-600 hover:text-blue-500 dark:text-blue-400 dark:hover:text-blue-300 font-medium">
                         Book Appointment →
                     </a>
                 </div>
@@ -217,44 +290,41 @@
                 <div>
                     <h4 class="text-lg font-bold text-gray-900 dark:text-white mb-4">Quick Links</h4>
                     <ul class="space-y-2">
-                        <li><a href="/frontend/about.html" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">About Us</a></li>
-                        <li><a href="/frontend/contact.html" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">Contact</a></li>
-                        <li><a href="/frontend/terms.html" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">Terms & Conditions</a></li>
-                        <li><a href="/frontend/privacy.html" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">Privacy Policy</a></li>
+                        <li><a href="about.html" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">About Us</a></li>
+                        <li><a href="services.html" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">Services</a></li>
+                        <li><a href="doctors.html" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">Doctors</a></li>
+                        <li><a href="faq.html" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">FAQ</a></li>
+                        <li><a href="testimonials.html" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">Testimonials</a></li>
+                        <li><a href="blog.html" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">Blog</a></li>
+                        <li><a href="contact.html" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">Contact</a></li>
                     </ul>
                 </div>
                 <div>
                     <h4 class="text-lg font-bold text-gray-900 dark:text-white mb-4">Connect With Us</h4>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">
-                            <span class="sr-only">Facebook</span>
-                            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd"></path>
-                            </svg>
+                            <i class="fab fa-facebook-f fa-lg"></i>
                         </a>
                         <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">
-                            <span class="sr-only">Twitter</span>
-                            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"></path>
-                            </svg>
+                            <i class="fab fa-twitter fa-lg"></i>
                         </a>
                         <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">
-                            <span class="sr-only">LinkedIn</span>
-                            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path fill-rule="evenodd" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" clip-rule="evenodd"></path>
-                            </svg>
+                            <i class="fab fa-instagram fa-lg"></i>
+                        </a>
+                        <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400">
+                            <i class="fab fa-linkedin-in fa-lg"></i>
                         </a>
                     </div>
                 </div>
             </div>
-            <div class="mt-8 pt-8 border-t border-gray-200 dark:border-gray-700">
-                <p class="text-center text-gray-600 dark:text-gray-400">&copy; 2024 HealthCare. All rights reserved.</p>
+            <div class="mt-8 border-t border-gray-200 dark:border-gray-700 pt-8 text-center">
+                <p class="text-gray-500 dark:text-gray-400">&copy; 2025 HealthCare. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
     <!-- Custom JavaScript -->
-    <script src="/frontend/js/main.js"></script>
+    <script src="js/main.js"></script>
     <script>
         // Initialize AOS
         AOS.init({
@@ -302,4 +372,4 @@
         });
     </script>
 </body>
-</html> 
+</html>
